--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/body-parser": "^1.19.6",
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/validator": "^13.15.2",
     "typescript": "^5.8.3"
   },
   "dependencies": {
@@ -26,6 +27,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.2",
     "nodemon": "^3.1.10",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "validator": "^13.15.15"
   }
 }
